--- a/iOS/OneToOneScreenShareSample/OneToOneScreenShareSample/Base.lproj/Main.storyboard
+++ b/iOS/OneToOneScreenShareSample/OneToOneScreenShareSample/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eE0-oO-5Jh">
-                                <rect key="frame" x="127" y="514" width="347" height="66"/>
+                                <rect key="frame" x="127" y="526" width="347" height="66"/>
                                 <subviews>
                                     <button opaque="NO" alpha="0.5" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tOc-nt-OCo" userLabel="publisherVideoButton">
                                         <rect key="frame" x="8" y="8" width="50" height="50"/>
@@ -140,17 +140,22 @@
                                 </variation>
                             </view>
                             <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="1Bm-tC-LWC">
-                                <rect key="frame" x="490" y="403" width="90" height="90"/>
+                                <rect key="frame" x="490" y="415" width="90" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="1Bm-tC-LWC" secondAttribute="height" multiplier="1:1" id="1vB-7d-iR3"/>
                                     <constraint firstAttribute="width" constant="90" id="L2D-Yp-eEZ"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xls-ky-LLT">
+                                <rect key="frame" x="0.0" y="20" width="600" height="506"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="eE0-oO-5Jh" firstAttribute="top" secondItem="Xls-ky-LLT" secondAttribute="bottom" id="1BL-Pa-Ayi"/>
                             <constraint firstItem="aZt-Qo-ZC4" firstAttribute="top" secondItem="7sn-ld-RRG" secondAttribute="top" constant="60" id="6sF-Nz-lAY"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eE0-oO-5Jh" secondAttribute="bottom" constant="20" id="8uY-tO-2Ls"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eE0-oO-5Jh" secondAttribute="bottom" constant="8" id="8uY-tO-2Ls"/>
                             <constraint firstItem="ztm-yF-Cb8" firstAttribute="top" secondItem="6Y4-Qa-Kly" secondAttribute="bottom" constant="20" id="B2c-GQ-Omz"/>
                             <constraint firstItem="ztm-yF-Cb8" firstAttribute="leading" secondItem="7sn-ld-RRG" secondAttribute="leading" constant="20" id="Dt4-bh-ART"/>
                             <constraint firstItem="6vG-FU-K8j" firstAttribute="top" secondItem="7sn-ld-RRG" secondAttribute="top" id="G84-Qz-bAK"/>
@@ -158,10 +163,13 @@
                             <constraint firstItem="6Y4-Qa-Kly" firstAttribute="leading" secondItem="7sn-ld-RRG" secondAttribute="leading" constant="20" id="LyG-6f-kfh"/>
                             <constraint firstAttribute="trailing" secondItem="1Bm-tC-LWC" secondAttribute="trailing" constant="20" id="Xic-8g-BxY"/>
                             <constraint firstAttribute="trailing" secondItem="6vG-FU-K8j" secondAttribute="trailing" id="YRr-0K-2xz"/>
+                            <constraint firstItem="Xls-ky-LLT" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="aqT-ss-29F"/>
                             <constraint firstAttribute="trailing" secondItem="aZt-Qo-ZC4" secondAttribute="trailing" constant="20" id="eXW-Sr-KU3"/>
                             <constraint firstAttribute="bottom" secondItem="6vG-FU-K8j" secondAttribute="bottom" id="gTj-Lm-RYf"/>
                             <constraint firstItem="eE0-oO-5Jh" firstAttribute="top" secondItem="1Bm-tC-LWC" secondAttribute="bottom" constant="21" id="knQ-7d-4Oz"/>
                             <constraint firstItem="6vG-FU-K8j" firstAttribute="leading" secondItem="7sn-ld-RRG" secondAttribute="leading" id="oED-UA-mFf"/>
+                            <constraint firstAttribute="trailing" secondItem="Xls-ky-LLT" secondAttribute="trailing" id="pP1-Fm-68f"/>
+                            <constraint firstItem="Xls-ky-LLT" firstAttribute="leading" secondItem="7sn-ld-RRG" secondAttribute="leading" id="qUH-ij-uXF"/>
                             <constraint firstItem="6Y4-Qa-Kly" firstAttribute="top" secondItem="7sn-ld-RRG" secondAttribute="top" constant="60" id="wTx-0y-iln"/>
                         </constraints>
                         <connections>
@@ -172,6 +180,7 @@
                             <outlet property="publisherCameraButton" destination="aZt-Qo-ZC4" id="3S2-dv-afL"/>
                             <outlet property="publisherView" destination="1Bm-tC-LWC" id="aO7-cL-J18"/>
                             <outlet property="screenShareHolder" destination="hba-ab-38p" id="Kzf-MD-5zA"/>
+                            <outlet property="shareView" destination="Xls-ky-LLT" id="Rt6-dp-mdv"/>
                             <outlet property="subscriberAudioButton" destination="6Y4-Qa-Kly" id="4Z4-dj-f5t"/>
                             <outlet property="subscriberVideoButton" destination="ztm-yF-Cb8" id="5ur-D8-WcY"/>
                             <outlet property="subscriberView" destination="6vG-FU-K8j" id="2ZT-bb-p4o"/>
