--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <div id="credentials" style="display:none;" data="<%= credentials %>"></div>
     <div id="main" class="main-container">
         <div id="videoContainer" class="video-container">
             <div id="sharingMask" class="sharing-mask" style="display:none;">
