--- a/android/android-screensharing-annotations/screensharing-acc-pack/src/main/res/layout/content_layout.xml
+++ b/android/android-screensharing-annotations/screensharing-acc-pack/src/main/res/layout/content_layout.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/screensharing_text"
-            android:textColor="@color/picker_color_white"/>
+            android:textColor="#FFFFFF"/>
 
         <ImageButton
             android:id="@+id/screensharing_close"
